--- a/app/views/layout.phtml
+++ b/app/views/layout.phtml
@@ -4,9 +4,7 @@
 </head>
 
 <body>
-	<header>header</header>
-	<?php $this->content(); ?>
-	<footer>footer</footer>
+{block name=body}{/block}
 </body>
 
 </html>
